8274233: Minor cleanup for ToolBox
Backport-of: e741a18062061c1959f7881503aaf3a4cbcae776